--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,61 @@
 <resources>
     <string name="app_name">BTMS</string>
+    <string name="welcome_title">Welcome to the app</string>
+    <string name="welcome_subtitle">An app for convenient bus seat booking, schedules, payments, and travel updates in Sri Lanka.</string>
+    <string name="get_started">Get Started</string>
+    <string name="create_account">Create an account</string>
+    <string name="login_title">Welcome back to the app</string>
+    <string name="email_address">Email Address</string>
+    <string name="password">Password</string>
+    <string name="forgot_password">Forgot Password?</string>
+    <string name="keep_signed_in">Keep me signed in</string>
+    <string name="login">Login</string>
+    <string name="sign_in_with_google">Continue with Google</string>
+    <string name="or_sign_in_with">or sign in with</string>
+    <string name="name">Name</string>
+    <string name="sign_up">Sign up</string>
+    <string name="or_sign_up_with">or sign up with</string>
+    <string name="terms_of_service">By continuing, you agree to our terms of service.</string>
+    <string name="verification_title">Congratulations!</string>
+    <string name="verification_message">We\'ve sent you a verification email, please check your inbox and follow the instructions to verify your account.</string>
+    <string name="thank_you">Thank you for signing up with us!</string>
+    <string name="sign_in_here">Sign in here</string>
+    <string name="where_you_want_go">Where you want go</string>
+    <string name="upcoming_journey">Upcoming Journey</string>
+    <string name="from">From:</string>
+    <string name="to">to:</string>
+    <string name="departure_time">Departure time:</string>
+    <string name="select_bus">Select your bus!</string>
+    <string name="seats_left">Seats left</string>
+    <string name="choose_seat">Choose your seat!</string>
+    <string name="select_boarding_point">Select Boarding Point</string>
+    <string name="select_drop_point">Select Drop Point</string>
+    <string name="selected_seats">Selected Seats</string>
+    <string name="total_fare">Total Fare</string>
+    <string name="proceed">Proceed</string>
+    <string name="traveller_information">Traveller Information</string>
+    <string name="passenger">Passenger</string>
+    <string name="passenger_1">Passenger 1</string>
+    <string name="passenger_2">Passenger 2</string>
+    <string name="full_name">Full Name</string>
+    <string name="age">Age</string>
+    <string name="male">Male</string>
+    <string name="female">Female</string>
+    <string name="contact_information">Contact Information</string>
+    <string name="mobile">Mobile</string>
+    <string name="email">Email</string>
+    <string name="proceed_to_book">Proceed to Book</string>
+    <string name="credit_card_details">Credit Card Details</string>
+    <string name="payment_method">Payment Method</string>
+    <string name="name_on_card">Name on card</string>
+    <string name="card_number">Card number</string>
+    <string name="card_expiration">Card expiration</string>
+    <string name="month">Month</string>
+    <string name="year">Year</string>
+    <string name="card_security_code">Card Security Code</string>
+    <string name="code">Code</string>
+    <string name="pay_now">Pay Now</string>
+    <string name="order_placed">Your order has been placed successfully</string>
+    <string name="thank_you_shopping">Thank you for choosing us! Feel free to continue shopping and explore our wide range of products. Happy Shopping!</string>
+    <string name="back_to_homepage">Back to Homepage</string>
 </resources>
