--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,61 +1,61 @@
 <resources>
     <string name="app_name">BTMS</string>
-    <string name="welcome_title">Welcome to the app</string>
-    <string name="welcome_subtitle">An app for convenient bus seat booking, schedules, payments, and travel updates in Sri Lanka.</string>
-    <string name="get_started">Get Started</string>
-    <string name="create_account">Create an account</string>
-    <string name="login_title">Welcome back to the app</string>
-    <string name="email_address">Email Address</string>
-    <string name="password">Password</string>
-    <string name="forgot_password">Forgot Password?</string>
-    <string name="keep_signed_in">Keep me signed in</string>
-    <string name="login">Login</string>
-    <string name="sign_in_with_google">Continue with Google</string>
-    <string name="or_sign_in_with">or sign in with</string>
-    <string name="name">Name</string>
-    <string name="sign_up">Sign up</string>
-    <string name="or_sign_up_with">or sign up with</string>
-    <string name="terms_of_service">By continuing, you agree to our terms of service.</string>
-    <string name="verification_title">Congratulations!</string>
-    <string name="verification_message">We\'ve sent you a verification email, please check your inbox and follow the instructions to verify your account.</string>
-    <string name="thank_you">Thank you for signing up with us!</string>
-    <string name="sign_in_here">Sign in here</string>
-    <string name="where_you_want_go">Where you want go</string>
-    <string name="upcoming_journey">Upcoming Journey</string>
-    <string name="from">From:</string>
-    <string name="to">to:</string>
-    <string name="departure_time">Departure time:</string>
-    <string name="select_bus">Select your bus!</string>
-    <string name="seats_left">Seats left</string>
-    <string name="choose_seat">Choose your seat!</string>
-    <string name="select_boarding_point">Select Boarding Point</string>
-    <string name="select_drop_point">Select Drop Point</string>
-    <string name="selected_seats">Selected Seats</string>
-    <string name="total_fare">Total Fare</string>
-    <string name="proceed">Proceed</string>
-    <string name="traveller_information">Traveller Information</string>
-    <string name="passenger">Passenger</string>
-    <string name="passenger_1">Passenger 1</string>
-    <string name="passenger_2">Passenger 2</string>
-    <string name="full_name">Full Name</string>
-    <string name="age">Age</string>
-    <string name="male">Male</string>
-    <string name="female">Female</string>
-    <string name="contact_information">Contact Information</string>
-    <string name="mobile">Mobile</string>
+    <string name="welcome_title">Chào mừng đến với ứng dụng</string>
+    <string name="welcome_subtitle">Ứng dụng đặt vé xe buýt tiện lợi, lịch trình, thanh toán và cập nhật thông tin du lịch tại Thành phố Hồ Chí Minh.</string>
+    <string name="get_started">Bắt đầu</string>
+    <string name="create_account">Tạo tài khoản</string>
+    <string name="login_title">Chào mừng trở lại</string>
+    <string name="email_address">Địa chỉ Email</string>
+    <string name="password">Mật khẩu</string>
+    <string name="forgot_password">Quên mật khẩu?</string>
+    <string name="keep_signed_in">Giữ đăng nhập</string>
+    <string name="login">Đăng nhập</string>
+    <string name="sign_in_with_google">Tiếp tục với Google</string>
+    <string name="or_sign_in_with">hoặc đăng nhập bằng</string>
+    <string name="name">Tên</string>
+    <string name="sign_up">Đăng ký</string>
+    <string name="or_sign_up_with">hoặc đăng ký bằng</string>
+    <string name="terms_of_service">Bằng cách tiếp tục, bạn đồng ý với các điều khoản dịch vụ của chúng tôi.</string>
+    <string name="verification_title">Chúc mừng!</string>
+    <string name="verification_message">Chúng tôi đã gửi email xác minh, vui lòng kiểm tra hộp thư và làm theo hướng dẫn để xác minh tài khoản của bạn.</string>
+    <string name="thank_you">Cảm ơn bạn đã đăng ký với chúng tôi!</string>
+    <string name="sign_in_here">Đăng nhập tại đây</string>
+    <string name="where_you_want_go">Bạn muốn đi đâu</string>
+    <string name="upcoming_journey">Hành trình sắp tới</string>
+    <string name="from">Từ:</string>
+    <string name="to">Đến:</string>
+    <string name="departure_time">Giờ khởi hành:</string>
+    <string name="select_bus">Chọn xe buýt của bạn!</string>
+    <string name="seats_left">Ghế còn lại</string>
+    <string name="choose_seat">Chọn ghế của bạn!</string>
+    <string name="select_boarding_point">Chọn điểm đón</string>
+    <string name="select_drop_point">Chọn điểm trả</string>
+    <string name="selected_seats">Ghế đã chọn</string>
+    <string name="total_fare">Tổng tiền</string>
+    <string name="proceed">Tiếp tục</string>
+    <string name="traveller_information">Thông tin hành khách</string>
+    <string name="passenger">Hành khách</string>
+    <string name="passenger_1">Hành khách 1</string>
+    <string name="passenger_2">Hành khách 2</string>
+    <string name="full_name">Họ và tên</string>
+    <string name="age">Tuổi</string>
+    <string name="male">Nam</string>
+    <string name="female">Nữ</string>
+    <string name="contact_information">Thông tin liên hệ</string>
+    <string name="mobile">Số điện thoại</string>
     <string name="email">Email</string>
-    <string name="proceed_to_book">Proceed to Book</string>
-    <string name="credit_card_details">Credit Card Details</string>
-    <string name="payment_method">Payment Method</string>
-    <string name="name_on_card">Name on card</string>
-    <string name="card_number">Card number</string>
-    <string name="card_expiration">Card expiration</string>
-    <string name="month">Month</string>
-    <string name="year">Year</string>
-    <string name="card_security_code">Card Security Code</string>
-    <string name="code">Code</string>
-    <string name="pay_now">Pay Now</string>
-    <string name="order_placed">Your order has been placed successfully</string>
-    <string name="thank_you_shopping">Thank you for choosing us! Feel free to continue shopping and explore our wide range of products. Happy Shopping!</string>
-    <string name="back_to_homepage">Back to Homepage</string>
+    <string name="proceed_to_book">Tiếp tục đặt vé</string>
+    <string name="credit_card_details">Chi tiết thẻ tín dụng</string>
+    <string name="payment_method">Phương thức thanh toán</string>
+    <string name="name_on_card">Tên trên thẻ</string>
+    <string name="card_number">Số thẻ</string>
+    <string name="card_expiration">Ngày hết hạn</string>
+    <string name="month">Tháng</string>
+    <string name="year">Năm</string>
+    <string name="card_security_code">Mã bảo mật thẻ</string>
+    <string name="code">Mã</string>
+    <string name="pay_now">Thanh toán ngay</string>
+    <string name="order_placed">Đơn hàng của bạn đã được đặt thành công</string>
+    <string name="thank_you_shopping">Cảm ơn bạn đã chọn chúng tôi! Hãy tiếp tục khám phá và đặt vé cho các chuyến đi tiếp theo. Chúc bạn có một hành trình vui vẻ!</string>
+    <string name="back_to_homepage">Về trang chủ</string>
 </resources>
